2016-08-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
        When Retrieving, set file-element path since it can be different than source.

2016-08-02 Riccardo Mottola <rm@gnu.org>

	* client.h
        * client.m
        * ftpclient.m
        * localclient.m
        Pass directory elements array by copy

2016-08-01 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Pass progress parameters by copy

2016-08-01 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Use NSTimeInterval for speed calculations.

2016-07-08 Riccardo Mottola <rm@gnu.org>

	* client.h
	* client.m
	* ftpclient.m
	* localclient.m
	* AppController.m
	Delete files may fail, handle result.

2016-07-07 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Use passive as default.

2016-07-03 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Mark progress methods as oneway.

2016-07-03 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Open local file in binary mode (needed on Windows)

2016-05-16 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Open files in binary mode (fixes on Windows), check more carefully for sent bytes.

2015-09-04 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Fix socktype for NetBSD.

2015-02-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* ftpclient.m
	* ftpclient.h
	Return success/failure in retrieveFile, add to the table only if it succeeds.

2015-02-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* ftpclient.m
	* ftpclient.h
	Return success/failure in storeFile, add to the table only if it succeeds.

2015-02-05 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Do not add element to the table if it is already there.

2015-02-02 Riccardo Mottola <rm@gnu.org>

	* fileTable.m (containsFileName)
	* fileTable.h
	Added method containsFileName to check if the current table stores a file with the same name

2014-05-27 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m